--- a/Capstone Project - The Battle of Neighborhoods (Week 1).ipynb
+++ b/Capstone Project - The Battle of Neighborhoods (Week 1).ipynb
@@ -9,9 +9,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<center><h1>Prime location in Lucknow, India for Real Estate investments</h1>\n",
+    "<h1>Prime location in Lucknow, India for Real Estate investments</h1>\n",
     "<h7>Dheerendra Kumar Singh,</h7><br/>\n",
-    "Aug 3, 2020</center>"
+    "Aug 3, 2020"
    ]
   },
   {
