--- a/Course 3 - Advance Computer Vision/W2/assignment/C3W2_Assignment.ipynb
+++ b/Course 3 - Advance Computer Vision/W2/assignment/C3W2_Assignment.ipynb
@@ -53,7 +53,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "yPyCrMyrqaxK"
+        "id": "FoD5T3IbCCWS"
       },
       "source": [
         "**Use the Fallback Runtime**\n",
@@ -65,7 +65,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "7meTJmbeqaxL"
+        "id": "UF-FDQtTCCWS"
       },
       "outputs": [],
       "source": [
@@ -2913,10 +2913,7 @@
     "colab": {
       "private_outputs": true,
       "provenance": [],
-      "toc_visible": true,
-      "runtime_attributes": {
-        "runtime_version": "2025.07"
-      }
+      "toc_visible": true
     },
     "kernelspec": {
       "display_name": "Python 3",
